Update AI provider pricing and tier descriptions in choosing guide
Fix pricing tiers for GLM Lite and Standard models Add NanoGPT option to
budget tier description Clarify OpenRouter and Chutes.ai payment options
Improve wording for budget tier usability

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@
 #!.gitignore
 
 # Explicitly ignore agent directories
-.agents/
-.claude/
-.octo/
+agents.md
+claude.md
+octo.md
 ```
 
 Now I'll check if any of these directories are currently tracked by git and remove them from the remote repository:
